--- a/index.html
+++ b/index.html
@@ -5,8 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/reset.css">
 </head>
 <body>
-    
+    <!-- //头部 -->
+    <header class="home_header">
+        <section class="home_top">
+            <ul class="home_top_l">
+                <li><a href="">品牌</a></li>
+                <li><a href="">Funtouch OS</a></li>
+                <li><a href="">体验店</a></li>
+                <li><a href="">政企业务</a></li>
+                <li><a href="">社区</a></li>
+            </ul>
+            <ul class="home_top_r">
+                <li><a href="">购物车</a></li>
+                <li><a href="">登陆</a></li> | 
+                <li><a href="">注册</a></li>
+            </ul>
+        </section>
+    </header>
+
+    <!-- //底部 -->
+    <footer class="home_footer">
+
+
+    </footer>
 </body>
 </html>
