--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/iconf">
 </head>
 <body>
     <!-- //头部 -->
@@ -20,10 +21,15 @@
                 <li><a href="">社区</a></li>
             </ul>
             <ul class="home_top_r">
-                <li><a href="">购物车</a></li>
-                <li><a href="">登陆</a></li> | 
-                <li><a href="">注册</a></li>
+                <li class="home_goods"><a href="">购物车</a></li>
+                <li class="home_login"><a href="">登陆</a></li> <span>|</span>
+                <li class="home_rest"><a href="">注册</a></li>
             </ul>
+        </section>
+        <section class="home_nav">
+            <div class="home_logo">
+                <i class="iconfont "></i>
+            </div>
         </section>
     </header>
 
