--- a/global/per-myOrder.html
+++ b/global/per-myOrder.html
@@ -1,12 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>我的订单</title>
+    <link rel="stylesheet" href="../css/per-myOrder.css">
+    <link rel="stylesheet" href="../css/common.css">
 </head>
+
 <body>
-    
+    <!-- t头部引用公共 -->
+    <div id="top"></div>
+    <!-- 主题内容 -->
+    <div id="main">
+        <div class="main-top content">
+            <a href="javascript">商城首页</a> &gt;
+            <a href="javascript">会员中心</a> &gt;
+            <a href="javascript">我的订单</a>
+        </div>
+        <div class="main-wrap clearfix content">
+            <aside class="m-meun">
+                <ul class="ziliao">
+                    <li>
+                        <a href="javascript" title="编辑资料">
+                            <img src="../images/per/timg (2).jpg" alt="">
+                        </a>
+                    </li>
+                    <li class="phone-name">vivo74658583756</li>
+                    <li class="my-bnus">
+                        我的积分
+                        <a href="javascript"><span class="buns-number">0</span></a>
+                    </li>
+                </ul>
+                <dl>
+                    <dt>交易管理</dt>
+                    <dd><a href="javascript">我的订单</a></dd>
+                    <dd><a href="javascript">我的回收单</a></dd>
+                    <dd><a href="javascript">退款/退货</a></dd>
+                    <dd><a href="javascript">我的奖品</a></dd>
+                    <dd><a href="javascript">我的积分</a></dd>
+                    <dt>评价管理</dt>
+                    <dd><a href="javascript">评价晒单</a></dd>            
+                    <dt>我的账户</dt>
+                    <dd><a href="javascript">个人资料</a></dd>
+                    <dd><a href="javascript">收货地址</a></dd>
+                    <dd><a href="javascript">我的礼包广场</a></dd>
+                    <dd><a href="javascript">我的换新鼓励金</a></dd>
+                    <dd><a href="javascript">我的优惠卷</a></dd>
+                    <dd><a href="javascript">我的收藏</a></dd>
+                </dl>
+                
+            </aside>
+            <article class="m-con">
+                <div class="oder-llist">
+                    <h3>我的订单</h2>
+                    <ul class="clearfix">
+                        <li><a href="javascript">我的订单</a></li>
+                        <li><a href="javascript">待付款</a></li>
+                        <li><a href="javascript">待收货</a></li>
+                        <li><a href="javascript">已完成</a></li>
+                        <li><a href="javascript">已关闭</a></li>
+                    </ul>
+                </div>
+            </article>
+        </div>
+    </div>
+
+
+
+
+
+
+    <!-- 底部引用公共 -->
+    <div class="footer"></div>
 </body>
+
 </html>
