--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/iconf">
+    <link rel="stylesheet" href="./css/iconfont.css">
 </head>
 <body>
     <!-- //头部 -->
@@ -26,17 +26,143 @@
                 <li class="home_rest"><a href="">注册</a></li>
             </ul>
         </section>
+    </header>
+    <section class="home_banner">
+        <img src="images/home/home_banner.jpg" alt="" class="imgbnr">
+    </section>
+    <section class="home_inner">
         <section class="home_nav">
             <div class="home_logo">
-                <i class="iconfont "></i>
+                <a href=""><i class="iconfont icon-VIVO"></i></a>
+            </div>
+            <ul class="home_phones">
+                <li><a href="">iQOO专区</a></li>
+                <li><a href="">NEX系列</a></li>
+                <li><a href="">X系列</a></li>
+                <li><a href="">S系列</a></li>
+                <li><a href="">Z系列</a></li>
+                <li><a href="">Y系列</a></li>
+                <li><a href="">U系列</a></li>
+                <li><a href="">真无线耳机</a></li>
+                <li><a href="">商城</a></li>
+                <li><a href="">服务</a></li>            
+            </ul>
+            <div class="home_search">
+                <i class="iconfont icon-magnifier"></i>
             </div>
         </section>
-    </header>
+    </section>
 
+
+    <section class="home_main">
+        <section class="home_m">
+            <div class="home_main_1">
+                <img src="images/home/home_main01.png" alt="" class="img01">
+            </div>
+            <div class="home_main_2">
+                <img src="images/home/home_main01.png" alt="" class="img02">
+            </div>
+        </section>
+        <section class="home_main_3">
+            <img src="images/home/home_main03.jpg" alt="" class="img03">
+        </section>
+        <section class="home_main_4">
+            <img src="images/home/home_main04.jpg" alt="" class="img04">
+        </section>
+        <section class="home_main_5">
+            <div class="main_51">
+                <a href=""><img class="pic51" src="images/home/main_51.jpg" alt=""></a>
+            </div>
+            <div class="main_52">
+                <a href=""><img class="pic52" src="images/home/main_52.png" alt=""></a>
+            </div>
+            <div class="main_53">
+                <a href=""><img class="pic53" src="images/home/main_53.png" alt=""></a>
+            </div>
+            <div class="main_54">
+                <a href=""><img class="pic54" src="images/home/main_54.jpg" alt=""></a>
+            </div>
+        </section>
+    </section>
+    
     <!-- //底部 -->
     <footer class="home_footer">
+        <section class="contain_inner">
+        <section class="home_footer_l">
+            <div class="footer_l1 footer_l">
+                <h3>热门链接</h3>
+                <ul class="home_ul1">
+                    <li><a href=""></a>NEX3</a></li>
+                    <li><a href=""></a>iQOO Pro</a></li>
+                    <li><a href=""></a>Z5</a></li>
+                    <li><a href=""></a>vivo摄影</a></li>
+                    <li><a href=""></a>查找手机常见问题</a></li>
+                    <li><a href=""></a>NEX3</a></li>
+                </ul>
+            </div>
+            <div class="footer_l2 footer_l">
+                <h3>在线购买</h3>
+                <ul class="home_ul2">
+                    <li><a href=""></a>官方商城</a></li>
+                    <li><a href=""></a>选购手机</a></li>
+                    <li><a href=""></a>选购配件</a></li>
+                    <li><a href=""></a>政企服务</a></li>
+                    <li><a href=""></a>以旧换新</a></li>
+                    <li><a href=""></a>服务保障</a></li>
+                </ul>
+            </div>
+            <div class="footer_l3 footer_l">
+                <h3>服务支持</h3>
+                <ul class="home_ul3">
+                    <li><a href=""></a>服务首页</a></li>
+                    <li><a href=""></a>服务网点查询</a></li>
+                    <li><a href=""></a>真伪查询</a></li>
+                    <li><a href=""></a>预约维修</a></li>
+                    <li><a href=""></a>维修配件价格</a></li>
+                    <li><a href=""></a>服务政策</a></li>
+                </ul>
+            </div>
+            <div class="footer_l4 footer_l">
+                <h3>vivo社区</h3>
+                <ul class="home_ul4">
+                    <li><a href=""></a>社区首页</a></li>
+                    <li><a href=""></a>摄影专区</a></li>
+                    <li><a href=""></a>微博</a></li>
+                    <li><a href=""></a>贴吧</a></li>
+                    <li><a href=""></a>兴趣部落</a></li>
+                </ul>
+            </div>
+            <div class="footer_l5 footer_l">
+                <h3>关于vivo</h3>
+                <ul class="home_ul5">
+                    <li><a href=""></a>vivo简介</a></li>
+                    <li><a href=""></a>工作机会</a></li>
+                    <li><a href=""></a>新闻资讯</a></li>
+                    <li><a href=""></a>采购平台</a></li>
+                    <li><a href=""></a>供应商管协同平台</a></li>
+                    <li><a href=""></a>开放平台</a></li>
+                </ul>
+            </div>
 
+        </section>
+        <section class="home_footer_r">
+            <a href=""><i class="iconfont icon-duanxin1"></i>在线客服</a><br />
+            <span>400-678-9688</span>
+            <p>全国客户服务热线 7*24小时</p>
+            <span>400-679-9688</span>
+            <p>NEX 专属服务热线 7*24小时</p>
+            <div>关注vivo <a href=""><i class="iconfont icon-weibo"></i></a><a href=""><i class="iconfont icon-weixin"></i></a><a href=""><i class="iconfont icon-zhifubao"></i></a></div>
 
+        </section>
+    </section>
+    <section class="foot">
+        <div>Copyright ©2011-2019 广东步步高电子工业有限公司 版权所有 保留一切权利 | 隐私政策 | 法律声明 | 粤B2-20080267 | 粤ICP备05100288号  | 中国</div>
+    </section>
     </footer>
+
+    <section class="backTop">
+        <div><i class="iconfont icon-xiangshang"></i></div>
+    </section>
+
 </body>
 </html>
