--- a/global/s.html
+++ b/global/s.html
@@ -398,7 +398,7 @@
     <div class="s_headerT">
         <div class="s_header">
             <div class="s_name">S1</div>
-            <div class="buy"><a href="./buy.html?id=s_series" style = 'color:white'> 购买</a></div>
+            <div class="buy"><a href="./buy.html?id=S_series" style = 'color:white'> 购买</a></div>
             <div class="s_header_r">
                 <div class="s_survey">概览</div>
                 <div class="s_photo">图库</div>
