--- a/global/z.html
+++ b/global/z.html
@@ -384,7 +384,7 @@
                 <li class="li2">参数规格</li>
                 <li class="li3">图库</li>
             </ul>
-            <div class="top3"><a href="./buy.html?id=z_series"> 购买</a></div>
+            <div class="top3"><a href="./buy.html?id=Z_series"> 购买</a></div>
     </div>
     <div class="bju-1">
         <img src="../images/z5/ia_100000006517.jpg" alt="" class="img1">
