--- a/global/per_my_collect.html
+++ b/global/per_my_collect.html
@@ -420,7 +420,7 @@
                 </ul>
                 <dl>
                     <dt>交易管理</dt>
-                    <dd><a href="http://localhost/test/vivo11-12/vivo/global/per_myOrder.html">我的订单</a></dd>
+                    <dd><a href="./per_myOrder.html">我的订单</a></dd>
                     <dd><a href="javascript">我的回收单</a></dd>
                     <dd><a href="javascript">退款/退货</a></dd>
                     <dd><a href="javascript">我的奖品</a></dd>
@@ -429,11 +429,11 @@
                     <dd><a href="javascript">评价晒单</a></dd>
                     <dt>我的账户</dt>
                     <dd><a href="javascript">个人资料</a></dd>
-                    <dd><a href="http://localhost/test/vivo11-12/vivo/global/per_myAdress.html">收货地址</a></dd>
+                    <dd><a href="./per_myAdress.html">收货地址</a></dd>
                     <dd><a href="javascript">我的礼包广场</a></dd>
                     <dd><a href="javascript">我的换新鼓励金</a></dd>
                     <dd><a href="javascript">我的优惠卷</a></dd>
-                    <dd><a href="http://localhost/test/vivo11-12/vivo//global/per_my_collect.html">我的收藏</a></dd>
+                    <dd><a href="./per_my_collect.html">我的收藏</a></dd>
                 </dl>
 
             </aside>
@@ -441,7 +441,7 @@
 
             <article class="m-con">
                 <h2>我的收藏</h2>
-                <table class="collect" border="1" cellpadding="0" cellspacing="0">
+                <table class="collect" cellpadding="0" cellspacing="0">
                     <thead>
                         <tr>
                             <th>商品名称</th>
